cleaned up and simplified

--- a/win.conf
+++ b/win.conf
@@ -1,7 +1,3 @@
-#
-# Voyeur Configuration
-#
-
 # Serial Communication Settings
 [serial]
 baudrate = 115200
@@ -14,9 +10,5 @@ verbosity = '-q -q' # for verbose -v, for quiet -q : multiple increases
 flags = '-patmega1280 -cstk500v1 -b57600 -D'
 
 [test]
-    [[iteration1]]
-        hex_path = .\test\arduino\iteration1\AcceptanceCode.cpp.115200.hex
-    [[acceptance1]]
-        hex_path = .\test\arduino\acceptance1\AcceptanceCode_ARD.cpp.115200.hex
-    [[continuous]]
-        hex_path = .\test\arduino\continuous_ser\controller_ser.cpp.115200.hex
+[[analog_read]]
+    hex_path = ./test/arduino/continuous/analog_sample_speed.cpp.115200.hex
